@@ -126,6 +126,9 @@
 				elgg_unregister_plugin_hook_handler("validate", "input", "htmlawed_filter_tags");
 			}
 		}
+		
+		// move groups
+		elgg_extend_view("groups/edit", "subsite_manager/groups/move");
 	}
 	
 	function subsite_manager_pagesetup(){
@@ -334,6 +337,7 @@
 	
 	elgg_register_action("subsite_manager/newest_users/bulk_action", dirname(__FILE__) . "/actions/bulk_action/dummy.php", "admin");
 	elgg_register_action("subsite_manager/bulk_action/user_delete", dirname(__FILE__) . "/actions/bulk_action/user_delete.php", "admin");
+	elgg_register_action("subsite_manager/groups/move", dirname(__FILE__) . "/actions/groups/move.php", "admin");
 	
 	elgg_register_action("subsites/export_admins", dirname(__FILE__) . "/actions/subsites/export_admins.php", "admin");
 	
